--- a/data/TestWidget.ui
+++ b/data/TestWidget.ui
@@ -17,11 +17,58 @@
    <item>
     <widget class="QWidget" name="widget" native="true">
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="1">
-       <widget class="QGroupBox" name="groupBox_2">
+      <item row="2" column="0">
+       <widget class="QGroupBox" name="groupBox_4">
         <property name="title">
-         <string>钱箱接口</string>
+         <string>参数文件解析</string>
         </property>
+        <layout class="QGridLayout" name="gridLayout_4">
+         <item row="0" column="0" colspan="2">
+          <widget class="QLineEdit" name="lineEdit_param"/>
+         </item>
+         <item row="0" column="2">
+          <widget class="QPushButton" name="pushButton_pfile">
+           <property name="text">
+            <string>选择文件</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QPushButton" name="p1001btn">
+           <property name="text">
+            <string>1001</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QPushButton" name="p1004btn">
+           <property name="text">
+            <string>1004</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="2">
+          <widget class="QPushButton" name="p2004btn">
+           <property name="text">
+            <string>2004</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QPushButton" name="p2002btn">
+           <property name="text">
+            <string>2002</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QPushButton" name="pushButton_6">
+           <property name="text">
+            <string>PushButton</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </widget>
       </item>
       <item row="0" column="0">
@@ -192,99 +239,33 @@
         </layout>
        </widget>
       </item>
-      <item row="2" column="0">
-       <widget class="QGroupBox" name="groupBox_4">
+      <item row="0" column="1">
+       <widget class="QGroupBox" name="groupBox_2">
         <property name="title">
-         <string>参数文件解析</string>
+         <string>钱箱接口</string>
         </property>
-        <widget class="QLineEdit" name="lineEdit_param">
-         <property name="geometry">
-          <rect>
-           <x>30</x>
-           <y>40</y>
-           <width>201</width>
-           <height>21</height>
-          </rect>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="pushButton_pfile">
-         <property name="geometry">
-          <rect>
-           <x>250</x>
-           <y>30</y>
-           <width>93</width>
-           <height>28</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>选择文件</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="p1001btn">
-         <property name="geometry">
-          <rect>
-           <x>30</x>
-           <y>80</y>
-           <width>93</width>
-           <height>28</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>1001</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="p1004btn">
-         <property name="geometry">
-          <rect>
-           <x>140</x>
-           <y>80</y>
-           <width>93</width>
-           <height>28</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>1004</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="p2004btn">
-         <property name="geometry">
-          <rect>
-           <x>250</x>
-           <y>80</y>
-           <width>93</width>
-           <height>28</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>2004</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="p2002btn">
-         <property name="geometry">
-          <rect>
-           <x>30</x>
-           <y>120</y>
-           <width>93</width>
-           <height>28</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>2002</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="pushButton_6">
-         <property name="geometry">
-          <rect>
-           <x>140</x>
-           <y>120</y>
-           <width>93</width>
-           <height>28</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>PushButton</string>
-         </property>
-        </widget>
+       </widget>
+      </item>
+      <item row="3" column="0">
+       <widget class="QGroupBox" name="groupBox_5">
+        <property name="title">
+         <string>文件目录获取</string>
+        </property>
+        <layout class="QGridLayout" name="gridLayout_3">
+         <item row="0" column="0">
+          <widget class="QLineEdit" name="lineEdit_url"/>
+         </item>
+         <item row="0" column="1">
+          <widget class="QPushButton" name="pushButton_fileList">
+           <property name="text">
+            <string>目录</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0" colspan="2">
+          <widget class="QListWidget" name="listWidget"/>
+         </item>
+        </layout>
        </widget>
       </item>
      </layout>
