--- a/data/TestWidget.ui
+++ b/data/TestWidget.ui
@@ -201,13 +201,6 @@
          <item row="0" column="1">
           <widget class="QLineEdit" name="lineEdit_download"/>
          </item>
-         <item row="0" column="2">
-          <widget class="QPushButton" name="pathBtn">
-           <property name="text">
-            <string>选择文件</string>
-           </property>
-          </widget>
-         </item>
          <item row="0" column="3">
           <widget class="QPushButton" name="pushButton_download">
            <property name="text">
@@ -225,14 +218,14 @@
          <item row="0" column="0">
           <widget class="QLabel" name="label">
            <property name="text">
-            <string>下载路径：</string>
+            <string>服务器文件路径：</string>
            </property>
           </widget>
          </item>
          <item row="1" column="0">
           <widget class="QLabel" name="label_2">
            <property name="text">
-            <string>上传文件：</string>
+            <string>本地文件路径：</string>
            </property>
           </widget>
          </item>
@@ -261,9 +254,6 @@
             <string>目录</string>
            </property>
           </widget>
-         </item>
-         <item row="1" column="0" colspan="2">
-          <widget class="QListWidget" name="listWidget"/>
          </item>
         </layout>
        </widget>
