--- a/data/TestWidget.ui
+++ b/data/TestWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>826</width>
-    <height>543</height>
+    <height>957</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -76,110 +76,43 @@
         <property name="title">
          <string>AFC主动上报接口</string>
         </property>
-        <widget class="QPushButton" name="Btn7000">
-         <property name="geometry">
-          <rect>
-           <x>160</x>
-           <y>30</y>
-           <width>91</width>
-           <height>28</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>7000</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="Btn4002">
-         <property name="geometry">
-          <rect>
-           <x>20</x>
-           <y>80</y>
-           <width>92</width>
-           <height>28</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>4002</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="Btn9003_login">
-         <property name="geometry">
-          <rect>
-           <x>30</x>
-           <y>140</y>
-           <width>92</width>
-           <height>28</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>9003-签到</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="Btn9003_logout">
-         <property name="geometry">
-          <rect>
-           <x>30</x>
-           <y>180</y>
-           <width>91</width>
-           <height>28</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>9003-签退</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="Btn9002">
-         <property name="geometry">
-          <rect>
-           <x>160</x>
-           <y>140</y>
-           <width>92</width>
-           <height>28</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>9002</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="Btn3001">
-         <property name="geometry">
-          <rect>
-           <x>20</x>
-           <y>40</y>
-           <width>92</width>
-           <height>28</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>3001</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="Btn7001">
-         <property name="geometry">
-          <rect>
-           <x>160</x>
-           <y>80</y>
-           <width>92</width>
-           <height>28</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>7001</string>
-         </property>
-        </widget>
-        <widget class="QPushButton" name="Btn9002_2">
-         <property name="geometry">
-          <rect>
-           <x>160</x>
-           <y>180</y>
-           <width>91</width>
-           <height>28</height>
-          </rect>
-         </property>
-         <property name="text">
-          <string>9006</string>
-         </property>
-        </widget>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QPushButton" name="Btn3001">
+           <property name="text">
+            <string>3001</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="Btn4002">
+           <property name="text">
+            <string>4002</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="Btn9003_login">
+           <property name="text">
+            <string>9003-签到</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="Btn9003_logout">
+           <property name="text">
+            <string>9003-签退</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="Btn7000">
+           <property name="text">
+            <string>7000</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
        </widget>
       </item>
       <item row="1" column="0" colspan="2">
@@ -230,13 +163,6 @@
           </widget>
          </item>
         </layout>
-       </widget>
-      </item>
-      <item row="0" column="1">
-       <widget class="QGroupBox" name="groupBox_2">
-        <property name="title">
-         <string>钱箱接口</string>
-        </property>
        </widget>
       </item>
       <item row="3" column="0">
