--- a/frame/StatusBar.ui
+++ b/frame/StatusBar.ui
@@ -88,11 +88,11 @@
          <enum>Qt::Horizontal</enum>
         </property>
         <property name="sizeType">
-         <enum>QSizePolicy::Preferred</enum>
+         <enum>QSizePolicy::Fixed</enum>
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>200</width>
+          <width>600</width>
           <height>20</height>
          </size>
         </property>
