--- a/ticket/CompensationFareWidget.ui
+++ b/ticket/CompensationFareWidget.ui
@@ -250,6 +250,13 @@
               </widget>
              </item>
              <item>
+              <widget class="QPushButton" name="pushButton">
+               <property name="text">
+                <string>进钱箱</string>
+               </property>
+              </widget>
+             </item>
+             <item>
               <spacer name="horizontalSpacer_3">
                <property name="orientation">
                 <enum>Qt::Horizontal</enum>
