--- a/data/TestWidget.ui
+++ b/data/TestWidget.ui
@@ -17,7 +17,120 @@
    <item>
     <widget class="QWidget" name="widget" native="true">
      <layout class="QGridLayout" name="gridLayout">
-      <item row="2" column="0">
+      <item row="2" column="0" colspan="2">
+       <widget class="QGroupBox" name="groupBox_3">
+        <property name="title">
+         <string>FTP文件接口</string>
+        </property>
+        <layout class="QGridLayout" name="gridLayout_2">
+         <item row="1" column="2">
+          <widget class="QPushButton" name="fileBtn">
+           <property name="text">
+            <string>选择文件</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
+          <widget class="QLineEdit" name="lineEdit_upload"/>
+         </item>
+         <item row="0" column="1">
+          <widget class="QLineEdit" name="lineEdit_download"/>
+         </item>
+         <item row="0" column="3">
+          <widget class="QPushButton" name="pushButton_download">
+           <property name="text">
+            <string>下载</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="3">
+          <widget class="QPushButton" name="pushButton_upload">
+           <property name="text">
+            <string>上传</string>
+           </property>
+          </widget>
+         </item>
+         <item row="0" column="0">
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>服务器文件路径：</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label_2">
+           <property name="text">
+            <string>本地文件路径：</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item row="0" column="0">
+       <widget class="QGroupBox" name="groupBox">
+        <property name="title">
+         <string>AFC主动上报接口</string>
+        </property>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QPushButton" name="Btn3001">
+           <property name="text">
+            <string>3001</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="Btn4002">
+           <property name="text">
+            <string>4002</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="Btn9003_login">
+           <property name="text">
+            <string>9003-签到</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="Btn9003_logout">
+           <property name="text">
+            <string>9003-签退</string>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="Btn7000">
+           <property name="text">
+            <string>7000</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item row="5" column="0">
+       <widget class="QGroupBox" name="groupBox_5">
+        <property name="title">
+         <string>文件目录获取</string>
+        </property>
+        <layout class="QGridLayout" name="gridLayout_3">
+         <item row="0" column="0">
+          <widget class="QLineEdit" name="lineEdit_url"/>
+         </item>
+         <item row="0" column="1">
+          <widget class="QPushButton" name="pushButton_fileList">
+           <property name="text">
+            <string>目录</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </widget>
+      </item>
+      <item row="4" column="0">
        <widget class="QGroupBox" name="groupBox_4">
         <property name="title">
          <string>参数文件解析</string>
@@ -71,113 +184,19 @@
         </layout>
        </widget>
       </item>
-      <item row="0" column="0">
-       <widget class="QGroupBox" name="groupBox">
+      <item row="1" column="0">
+       <widget class="QGroupBox" name="groupBox_2">
         <property name="title">
-         <string>AFC主动上报接口</string>
+         <string>时间设置</string>
         </property>
-        <layout class="QHBoxLayout" name="horizontalLayout">
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
          <item>
-          <widget class="QPushButton" name="Btn3001">
-           <property name="text">
-            <string>3001</string>
-           </property>
-          </widget>
+          <widget class="QLineEdit" name="lineEditTime"/>
          </item>
          <item>
-          <widget class="QPushButton" name="Btn4002">
+          <widget class="QPushButton" name="timeBtn">
            <property name="text">
-            <string>4002</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="Btn9003_login">
-           <property name="text">
-            <string>9003-签到</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="Btn9003_logout">
-           <property name="text">
-            <string>9003-签退</string>
-           </property>
-          </widget>
-         </item>
-         <item>
-          <widget class="QPushButton" name="Btn7000">
-           <property name="text">
-            <string>7000</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
-      </item>
-      <item row="1" column="0" colspan="2">
-       <widget class="QGroupBox" name="groupBox_3">
-        <property name="title">
-         <string>FTP文件接口</string>
-        </property>
-        <layout class="QGridLayout" name="gridLayout_2">
-         <item row="1" column="2">
-          <widget class="QPushButton" name="fileBtn">
-           <property name="text">
-            <string>选择文件</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="1">
-          <widget class="QLineEdit" name="lineEdit_upload"/>
-         </item>
-         <item row="0" column="1">
-          <widget class="QLineEdit" name="lineEdit_download"/>
-         </item>
-         <item row="0" column="3">
-          <widget class="QPushButton" name="pushButton_download">
-           <property name="text">
-            <string>下载</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="3">
-          <widget class="QPushButton" name="pushButton_upload">
-           <property name="text">
-            <string>上传</string>
-           </property>
-          </widget>
-         </item>
-         <item row="0" column="0">
-          <widget class="QLabel" name="label">
-           <property name="text">
-            <string>服务器文件路径：</string>
-           </property>
-          </widget>
-         </item>
-         <item row="1" column="0">
-          <widget class="QLabel" name="label_2">
-           <property name="text">
-            <string>本地文件路径：</string>
-           </property>
-          </widget>
-         </item>
-        </layout>
-       </widget>
-      </item>
-      <item row="3" column="0">
-       <widget class="QGroupBox" name="groupBox_5">
-        <property name="title">
-         <string>文件目录获取</string>
-        </property>
-        <layout class="QGridLayout" name="gridLayout_3">
-         <item row="0" column="0">
-          <widget class="QLineEdit" name="lineEdit_url"/>
-         </item>
-         <item row="0" column="1">
-          <widget class="QPushButton" name="pushButton_fileList">
-           <property name="text">
-            <string>目录</string>
+            <string>设置时间</string>
            </property>
           </widget>
          </item>
