--- a/ticket/TicketReregisterWidget.ui
+++ b/ticket/TicketReregisterWidget.ui
@@ -94,6 +94,12 @@
         </property>
         <item>
          <widget class="QFrame" name="centerFrame1">
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>190</height>
+           </size>
+          </property>
           <property name="frameShape">
            <enum>QFrame::StyledPanel</enum>
           </property>
@@ -234,16 +240,10 @@ border-radius: 3px;
            <item>
             <widget class="QTableWidget" name="tableWidget">
              <property name="sizePolicy">
-              <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
                <horstretch>0</horstretch>
                <verstretch>0</verstretch>
               </sizepolicy>
-             </property>
-             <property name="maximumSize">
-              <size>
-               <width>16777215</width>
-               <height>120</height>
-              </size>
              </property>
              <property name="selectionBehavior">
               <enum>QAbstractItemView::SelectRows</enum>
